DOMjudge Programming Contest Judging System

Version 3.1.2 - SVN
-------------------
 - Fix missing permissions for plugin interface SQL user.

Version 3.1.1 - 22 August 2010
------------------------------
 - Update upstream autoconf macro's fixing multiple small bugs.
 - Fix autoconf checks for libcURL and static linking.
 - Fix Makefile rules for building library objects and for
   (re)generating configure script.
 - Workaround sorttable colspan bug and use stable sorting.
 - Small documentation fixes.
 - Fix expected output for reboot test-source.
 - Don't shorten a team's hostname if it is an IP address.
 - Add unique index on language extension, required for compile scripts.
 - Remove literate Haskell test-source: doesn't compile without extension.

Version 3.1.0 - 14 July 2010
----------------------------
 - Add multiple testcases support.
 - Add PHP session support as alternative to IP address authentication.
   Based on patches by Tobias Werth.
 - Bugfixes and improvements to checktestdata program.
 - Fix error trapping in subshells, thanks Jan Jergus. (Closes: #2866430)
 - Fix bug in lib.database.php with array_map "class::method" notation.
 - Add 'enabled' field to contest to allow for easier editing.
 - Only show the configured submission methods in the team manual.
 - Fix install of gendbpasswords and use /dev/urandom.
 - Add documentation on static_scoreboard.
 - Add problem subject to clarifications, idea from DomJudge@FAU.
 - Add WHILE command and tests to checktestdata syntax.
 - Move PENALTY_TIME variable out of common-config into domserver-config.
 - Add combined_scoreboard script to view scoreboard of multiple sites.
 - The judgedaemon now tries to restore a lost db connection (Closes: #2897130)
 - Fix: check for both htpasswd{,2} binaries in configure.
 - Fix white problem colour by adding a circle image with black border.
 - Ports from ETH tree: use pipes with wc and gcc.
 - Fix bug: typo in presentation-error exitcode, and add safeguard.