@@ -3,6 +3,8 @@ DOMjudge Programming Contest Judging System
 Version 3.1.2 - SVN
 -------------------
  - Fix missing permissions for plugin interface SQL user.
+ - Fix information leak in clarification problems list. (Closes: #3096018)
+ - Small documentation improvements.
 
 Version 3.1.1 - 22 August 2010
 ------------------------------
